--- a/styleguide.html
+++ b/styleguide.html
@@ -1,18 +1,57 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <title>Portfolio Coding Advantage</title>
-  <meta name="description" content="">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <link rel="stylesheet" href="./styles/styles.css">
-</head>
+  <head>
+    <title>Portfolio Coding Advantage</title>
+    <meta name="description" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <link rel="stylesheet" href="./styles/styles.css">
+  </head>
 
-<body>
+  <body>
+    <h1>Styleguide Title</h1>
 
-<h1>Styleguide</h1>
+    <h2>Subheading</h2>
+
+    <div id="project_viewer">
+      <p>This is the project viewport</p>
+
+      <div id="project_description">
+        <h3>This is H3 & project name.</h3>
+        <h5>This is H5 & project description.</h5>
+      </div>
+
+      <h4>This is H4</h4>
+
+      <h6>This is H6</h6>
+
+      <p>This is a paragraph</p>
+      <p>This is a <a href="#">Hyperlink</a> and this is text.</p>
+    </div>
 
 
-</body>
+    <div id="nav_bar">
+      <div class="table">
+        <ul>
+          <li>
+            <button>This is an option.</button>
+          </li>
+          <li>
+            <button>This is an option.</button>
+          </li>
+          <li>
+            <button>This is an option.</button>
+          </li>
+          <li>
+            <button>This is an option.</button>
+          </li>
+          <li>
+            <button>This is an option.</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </body>
 </html>
