New mid-fi file

--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -6,34 +6,45 @@
     <meta name="description" content="">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/mid-fi Style.css">
   </head>
 
   <body>
+    <h1>Harlen Bertrand</h1>
 
-    <div class="Center_Element">
-      <h1>Styleguide Title</h1>
-      <br>
-      <p>Subheading</p>
+    <h2>Character Illustrator/Designer</h2>
+
+    <div id="project_viewer">
+      <div id="project_description">
+        <h3>Graim - The Hunter</h3>
+        <h5>A character portrait that I was in the <br> process of doing
+        sometime ago when I had freedom.</h5>
+      </div>
+
     </div>
 
-    <ul id="menu_options">
-      <li>
-      <h3>This is H3</h3>
-      </li>
-      <li>
-      <h4>This is H4</h4>
-      </li>
-      <li>
-      <h5>This is H5</h5>
-      </li>
-      <li>
-      <h6>This is H6</h6>
-      </li>
-    </ul>
 
-    <p>This is a paragraph</p>
-    <p>This is a <a href="#">Hyperlink</a>and this is text.</p>
+    <div id="nav_bar">
+      <div class="table">
+        <ul>
+          <li>
+            <button>Portfolio Piece</button>
+          </li>
+          <li>
+            <button>Portfolio Piece</button>
+          </li>
+          <li>
+            <button>Portfolio Piece</button>
+          </li>
+          <li>
+            <button>Portfolio Piece</button>
+          </li>
+          <li>
+            <button>Portfolio Piece</button>
+          </li>
+        </ul>
+      </div>
+    </div>
 
   </body>
 </html>
