--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -5,9 +5,8 @@
     <title>Portfolio Coding Advantage</title>
     <meta name="description" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="./styles/mid-fi Style.css">
-    <script src="carouselBehaviour.js"></script>
+    <script type="text/javascript" src="./js/carouselBehaviour.js"></script>
   </head>
 
   <body>
