--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -9,31 +9,151 @@
     <script type="text/javascript" src="./js/carouselBehaviour.js"></script>
   </head>
 
-  <body>
+  <body onload = showSlides(1)>
     <a id="reset">Harlen Bertrand</a>
     <h2>Character Illustrator/Designer</h2>
     
     <div id="project_viewerport">
 
       <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project Fire - Thumbnail.jpg" alt="EPA">
         <section class="project_description">
           <h3>Project Fire</h3>
           <h5>Project Fire tells the story of a Knight tasked to find a 
             prince who has run away from his royal roots in search of a 
             legendary treasure that is said to grant the user any wish 
-            that they want.</h5>
+            that they want.
+          </h5>
         </section>
-        <img src="https://i.ibb.co/Jnk9nP5/WIP.png" alt="Graim">
       </div>
       <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project Fire - Thumbnail.jpg" alt="Graim">
         <section class="project_description">
-          <h3>Project Fire</h3>
-          <h5>Project Fire tells the story of a Knight tasked to find a 
-            prince who has run away from his royal roots in search of a 
-            legendary treasure that is said to grant the user any wish 
-            that they want.</h5>
+          <h3>Vigilance</h3>
+          <h5>Vigilance tells the story of a private investigator who 
+            is investigating a mysterious superhuman that some people call
+            a hero while some call a villain.
+          </h5>
         </section>
-        <img class="project_thumbnail" src="https://i.ibb.co/Jnk9nP5/WIP.png" alt="Graim">
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>Project Arroyo</h3>
+          <h5>Fallout: Project Arroyo is a fan recreation of Fallout 2 in the
+            Fallout 4 game engine using updated graphics, mechanics, and story
+            telling.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>The Children of the Tree</h3>
+          <h5>The Children of the Tree is a hypothetical video game that tells
+            the story of a fisherman caught up in a world of dreams who is searching
+            for their lost family.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>Coffee Mockup</h3>
+          <h5>This hypothetical coffee brand, named Hypnos & Joe, is a CBD infused
+            sleepytime drink that is meant to do the exact opposite of what Coffee
+            is meant to do.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>Design Student Life Animation</h3>
+          <h5>The design student life is a silly animation that is meant to
+            give a glimpse into what I experienced as a design student and trying
+            to find a balance in work and life.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>Tuscany Bag Mockup</h3>
+          <h5>An assignment at Capilano University that is meant to condense
+            a countries culture into a bag that is given to vistors to the country.</a>
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>Nanaimo Crime Stoppers</h3>
+          <h5>The Nanaimo Police Department had approached us students to design
+            a series of posters that is to promote their crime stoppers division
+            and to encourage citizen participation.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>SOCAN Annual Report Mockup</h3>
+          <h5>SOCAN, otherwise known as The Society of Composers, Authors and
+            Publishers is a Canadian Based orangization that is meant to protect
+            artists and their work.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>The Children of the Tree</h3>
+          <h5>The Children of the Tree is a hypothetical video game that tells
+            the story of a fisherman caught up in a world of dreams who is searching
+            for their lost family.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>The Children of the Tree</h3>
+          <h5>The Children of the Tree is a hypothetical video game that tells
+            the story of a fisherman caught up in a world of dreams who is searching
+            for their lost family.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>The Children of the Tree</h3>
+          <h5>The Children of the Tree is a hypothetical video game that tells
+            the story of a fisherman caught up in a world of dreams who is searching
+            for their lost family.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>The Children of the Tree</h3>
+          <h5>The Children of the Tree is a hypothetical video game that tells
+            the story of a fisherman caught up in a world of dreams who is searching
+            for their lost family.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>The Children of the Tree</h3>
+          <h5>The Children of the Tree is a hypothetical video game that tells
+            the story of a fisherman caught up in a world of dreams who is searching
+            for their lost family.
+          </h5>
+        </section>
       </div>
 
       <a class="project_navigate_left" onclick="plusSlides(-1)"></a>
@@ -57,62 +177,62 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a onclick="currentSlide(3)">
               <button>Project Arroyo</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(4)">
               <button>The Children of the Tree</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(5)">
               <button>Coffee Mockup</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(6)">
               <button>Design Student Life Animation</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(7)">
               <button>Tuscany Bag Mockup</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(8)">
               <button>Nanaimo Crime Stoppers</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(9)">
               <button>SOCAN Annual Report Mockup</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(10)">
               <button>Digital Typography</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(11)">
               <button>Evangeline Wine Mockup</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(12)">
               <button>Gear S3 Mock Advertisment</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(13)">
               <button>Yuko Shimizu - Restrospective</button>
             </a>
           </li>
           <li>
-            <a href="#"></a>
+            <a onclick="currentSlide(14)">
               <button>Total Recall Poster Mockup</button>
             </a>
           </li>
