--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -108,7 +108,26 @@
       <div class="project fade">
         <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
         <section class="project_description">
-          <h3>The Children of the Tree</h3>
+          <h3>Digital Typography</h3>
+          <h5>Famous names known throughout the design world are featured in this
+            mocked up magazine spread that are composed of portraits of said designers
+            in the form of ASCII art.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>Evangeline Wine Mockup</h3>
+          <h5>Evangeline is the name of a wine that is meant to instill a sense of
+            elegance and art deco that is named after the creators wife, Evangeline.
+          </h5>
+        </section>
+      </div>
+      <div class="project fade">
+        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <section class="project_description">
+          <h3>Gear S3 Mock Advertisement</h3>
           <h5>The Children of the Tree is a hypothetical video game that tells
             the story of a fisherman caught up in a world of dreams who is searching
             for their lost family.
@@ -118,40 +137,20 @@
       <div class="project fade">
         <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
         <section class="project_description">
-          <h3>The Children of the Tree</h3>
-          <h5>The Children of the Tree is a hypothetical video game that tells
-            the story of a fisherman caught up in a world of dreams who is searching
-            for their lost family.
+          <h3>Yuko Shimizu - Restrospective</h3>
+          <h5>Yuko Shimizu is a famed illustrator who has her feet dipped into many
+            different subject matters such as the abstract, the surreal, and the
+            fantasy genre.
           </h5>
         </section>
       </div>
       <div class="project fade">
         <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
         <section class="project_description">
-          <h3>The Children of the Tree</h3>
-          <h5>The Children of the Tree is a hypothetical video game that tells
-            the story of a fisherman caught up in a world of dreams who is searching
-            for their lost family.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>The Children of the Tree</h3>
-          <h5>The Children of the Tree is a hypothetical video game that tells
-            the story of a fisherman caught up in a world of dreams who is searching
-            for their lost family.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>The Children of the Tree</h3>
-          <h5>The Children of the Tree is a hypothetical video game that tells
-            the story of a fisherman caught up in a world of dreams who is searching
-            for their lost family.
+          <h3>Total Recall Movie Poster</h3>
+          <h5>Total Recall tells the story of Douglas Quiad. A lowly construction
+            worker who becomes the victim of an interplanetary conspiracy that
+            thrusts him into a fight for survival.
           </h5>
         </section>
       </div>
