--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
   </head>
 
   <body>
-    <img src="./images/holding_Logo.png" alt="Monster Logo">
+    <div id="centerObjects">
+      <h2>H.B.</h2>
+      <h3>Coming soon to a browser near you!</h3>
+    </div>
 
-    <h2>H.B.</h2>
-    <h3>Website Under Constuction</h3>
+    <div id="quote">
+      <p>“The true sign of intelligence 
+        is not knowledge, but imagination.”
+      </p>
+      <p id="author">-Albert Einstein
+      </p>
+    </div>
 
     <div id="externalLinks">
         <button id="linked" type="submit"></button>
