Added contact Function

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         id="art" type="submit"></button>
     </div>
 
-    <button id="contact">Contact</button>
+    <a href="mailto:harlenbertrand@outlook.com">
+      <button id="contact">Contact</button>
+    </a>
 
   </body>
 </html>
